[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monstr-terminal"
dynamic = ["version"]
description = "Monstr Terminal: command line tools for nostr"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "monty", email = "monty@monty888.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "monstr>=0.1.2",
    "prompt_toolkit>=3.0.38",
    "toml>=0.10.2",
]

[project.urls]
Documentation = "https://github.com/monty888/monstr_terminal#readme"
Issues = "https://github.com/monty888/monstr_terminal/issues"
Source = "https://github.com/monty888/monstr_terminal"

[tool.hatch.version]
path = "src/monstr_terminal/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/monstr-terminal tests}"

[tool.coverage.run]
source_pkgs = ["monstr-terminal", "tests"]
branch = true
parallel = true
omit = [
  "src/monstr_terminal/__about__.py",
]

[tool.coverage.paths]
bots = ["src/monstr_terminal", "*/monstr_terminal/src/bots"]
tests = ["tests", "*/monstr_terminal/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/monstr_terminal"]
